# explorer

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml_  .prettierrc  CLAUDE.md  README.md  package-lock.json  query.sql
.github/workflows/: build-api-container.yml  build-bull-board-container.yml  build-web-app-container.yml  build-web-app.yml  ci-api.yml  ci-web-app.yml  main.yml  update-changelog.yml
.github_/workflows/: prettier.yml
.gitlab/issue_templates/: Feature Request.md  _Bug.md  bug.md
.templates/infra/web-app/: deployment.yaml
api/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  build.sh  index.js  jest.config.ts  nest-cli.json  olfyiv5-tables.sql  olfyiv6-tables.sql  package-lock.json  package.json  tables.sql  tables_local.sql  tsconfig.json
api/prisma/: schema.prisma
api/src/: main.ts  schema.gql  types.ts  utils.ts
api/src/app/: app.module.ts  app.service.ts
api/src/assets/: validator-handle.json
api/src/base/: BaseController.ts  (+3 more)
api/transformer/: .gitignore  Cargo.toml  rustfmt.toml
api/transformer/.cargo/: config.toml
api/transformer/src/: main.rs  to_array_data.rs  utils.rs
api/transformer/src/models/: ancestry_collection.rs  beneficiary_policy_collection.rs  block_metadata_transaction_collection.rs  boundary_status_collection.rs  burn_counter_collection.rs  burn_tracker_collection.rs  coin_balance_collection.rs  consensus_reward_collection.rs  donor_voice_registry.rs  epoch_fee_maker_registry_collection.rs  event_collection.rs  genesis_transaction_collection.rs  mod.rs  multi_action_collection.rs  multisig_account_owners_collection.rs  script_collection.rs  slow_wallet_collection.rs  slow_wallet_list_collection.rs  state_checkpoint_transaction_collection.rs  total_supply_collection.rs  tower_list_collection.rs  user_transaction_collection.rs  vdf_difficulty_collection.rs
documentation/: creating-new-collection.md
infra/: explorer-web-app-dev.deployment.yaml
infra/web-app/: deployment.yaml  ingress.yaml  service.yaml
ol-fyi-local-infra/: compose.yml  run.sh
ol-fyi-local-infra/redis/: redis.conf
pacakges/bull-board/: Dockerfile  build.sh  index.js  package-lock.json  package.json
scripts/: monitor-redis-memory.js
web-app/: .env  .env.example  .env.production  .versionrc  CHANGELOG.md  build.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
web-app/docker/: Dockerfile  nginx.conf
web-app/scripts/: generate_changelog.sh  update-changelog.sh
web-app/src/: config.ts  contants.ts  contants.tsx  main.tsx  utils.ts
(+374 files in other folders)
