[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } # for our async runtime

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

lazy_static = "1.4.0"

arrow = { version = "50" }
parquet = { version = "50" }
arrow-array = { version = "50" }
arrow-schema = { version = "50" }
regex = "^1.7.0"

# v7
anyhow = "1.0.62"

futures = "= 0.3.24" # Previously futures v0.3.23 caused some consensus network_tests to fail. We now pin the dependency to v0.3.24.
futures-util = "0.3.21"
diem-api-types = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "7b843bc4d46f5f62dd906644d22df5338d3ddde1" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

poem = { version = "=1.3.55", features = ["anyhow", "rustls"] }
poem-openapi = { version = "=2.0.11", features = ["swagger-ui", "url"] }
poem-openapi-derive = "=2.0.11"
clap = { version = "4.4.18", features = ["cargo", "derive"] }
