[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } # for our async runtime

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

lazy_static = "1.4.0"

arrow = { version = "51" }
parquet = { version = "51" }
arrow-array = { version = "51" }
arrow-schema = { version = "51" }
chrono = "= 0.4.39" # chrono released a breaking change at 0.4.40 so we have to pin here. Remove this once they get their act together.
regex = "^1.7.0"

# v7
anyhow = "1.0.62"

futures = "= 0.3.24" # Previously futures v0.3.23 caused some consensus network_tests to fail. We now pin the dependency to v0.3.24.
futures-util = "0.3.21"
diem-api-types = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "b9f01f9189978520c8dffa08c7b75f3ea2f5f545" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

poem = { version = "=1.3.56", features = ["anyhow", "rustls"] }
poem-openapi = { version = "=2.0.27", features = ["swagger-ui", "url"] }
poem-openapi-derive = "=2.0.27"
clap = { version = "4.4.18", features = ["cargo", "derive"] }
thiserror = "1.0.59"
serde_with = { version = "3.8.0" }
